sugar (0.81.1-1) unstable; urgency=low

  * New upstream release.
    + Merge activities.default into favorites. Closes: bug#480856.
  * Update debian/copyright and debian/copyright-hints (new owners but
    same licenses).
  * Rewrite debian/copyright to only mention each licensing string once.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 24 May 2008 22:31:14 +0200

sugar (0.79.4-2) unstable; urgency=medium

  * Update cdbs tweaks:
    + Strip any non-printable characters in copyright-check.mk.
  * Update danish l10n.
  * Raise to urgency=medium, as these are small changes that shouldn't
    delay the earlier large changes reaching Lenny.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 29 Apr 2008 15:29:41 +0200

sugar (0.79.4-1) unstable; urgency=low

  [ Santiago Ruano Rincón ]
  * Fixed sugar.desktop location

  [ Jonas Smedegaard ]
  * New upstream release.
  * Highlights:
    + Display current activity when its frame icon is clicked
    + Add support for adding/removing activities to/from ring
    + Coding improvements thanks to pylint
    + Improved accesspoint indication
    + support battery-charge-state-dependent battery frame icon
  * Drop patch 0001 included in new upstream release.
  * Depend on python-simplejson (crucial for dbus interaction - possibly
    only since 0.79.2).
  * Depend on librsvg2-common (SVG support in python-gnome2-desktop is
    not enough).  Closes: bug#476789, thanks to Shaun Jackman.
  * Depend on x11-xserver-utils (xrandr needed for rotation: <alt>r).
  * Tighten python-artwork recommendation to versions supporting new UI.
    Closes: bug#477275, thanks to Ivan Vucica.
  * Add patch 2003 to resolve Debian-style timezone config in
    sugar-control-panel.
  * Add patch 2991 to enable danish l10n in configure.
  * Use XO-style in sugar-emulator.desktop (why not?).
  * Register sugar and sugar-emulator with the Debian menu system.
  * Bump debhelper compatibility level to 6.